--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,18 @@
 @import '@angular/cdk/overlay-prebuilt.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* You can add global styles to this file, and also import other style files */
 
 
+* {
+  font-family: "Roboto", sans-serif;
+}
+
+
 :root {
---font-sans: ''
+  --font-sans: 'Roboto', sans-serif;
 }
 
 :root {
