--- a/src/app/pages/books-page/books-page.component.html
+++ b/src/app/pages/books-page/books-page.component.html
@@ -4,7 +4,9 @@
   } @else {
     <hlm-spinner />
   }
-  @if (!isFetching && (!books || books?.length === 0)) {
+  @if (!isFetching && (!books || books!.length === 0)) {
     <p>It seems like no books are available</p>
   }
+
+  <app-add-book />
 </app-page>
