:sparkles: completes setup - for inserting books

--- a/src/app/global/ui/book-display/book-display.component.html
+++ b/src/app/global/ui/book-display/book-display.component.html
@@ -1,8 +1,8 @@
-@for (category of categorizedBooks; track category.range) {
-  <h2 [class]="hlmH4 + ' text-center'">{{category.range | mergeRange}}</h2>
+@for (category of categorizedBooks; track $index) {
+  <h2 [class]="hlmH4 + ' text-center'">{{category.range}}</h2>
   @if (category.books.length > 0) {
       <div class="flex flex-wrap justify-start align-middle gap-4 w-full my-4">
-          @for (book of category.books; track book.name + book.author) {
+          @for (book of category.books; track $index) {
               <app-books-card [book]="book"></app-books-card>
           }
       </div>
