--- a/src/app/global/ui/books-card/books-card.component.html
+++ b/src/app/global/ui/books-card/books-card.component.html
@@ -1,4 +1,4 @@
-<section class="px-4 py-2 basis-1/3  min-w-[300px] flex-grow-1 flex-shrink-0" hlmCard>
+<section class="px-4 py-2 basis-1/3  w-[300px] flex-grow-1 flex-shrink-0" hlmCard>
   @if (book) {
     <h3 [class]="hlmH3">{{book.name}}</h3>
     <p [class]="hlmSmall + 'mt-1.5'">{{book.author}}</p>
